--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.14.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/base": "^5.0.0-beta.24",
     "@mui/icons-material": "^5.14.14",
+    "@mui/joy": "^5.0.0-beta.15",
     "@mui/material": "^5.14.14",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "cloudinary": "^1.41.1",
+    "dotenv": "^16.3.1",
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0",
     "react-phone-number-input": "^3.3.7",
     "react-router-dom": "^6.15.0",
     "react-slick": "^0.29.0",
@@ -30,5 +36,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "vite": "^4.4.5"
+  },
+  "peerDependencies": {
+    "react": "^17.0.0 || ^18.0.0",
+    "react-dom": "^17.0.0 || ^18.0.0"
   }
 }
