--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.14.14",
     "@mui/joy": "^5.0.0-beta.15",
     "@mui/material": "^5.14.14",
+    "axios": "^1.6.3",
     "cloudinary": "^1.41.1",
     "dotenv": "^16.3.1",
     "react": "^17.0.0 || ^18.0.0",
